@@ -33,6 +33,7 @@ java {
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
     options.compilerArgs.add("-parameters")
+    options.compilerArgs.add("--add-modules=jdk.incubator.vector")
 }
 
 tasks.register("printClasspath") {
